# transformers_equivalence_classes

./: .gitignore  README.md  __init__.py  bert_baseline.sh  bert_exploration.sh  bert_feature_importance.sh  bert_interpretation_example.sh  dashboard.py  data.py  eq_class_probas_analysis.sh  image_convert.py  jacobian_function.py  logics.py  pyproject.toml  requirements.txt  simec_bert.py  simec_bert_exploration.py  simec_bert_feature_importance.py  simec_vit.py  simec_vit_exploration.py  simec_vit_exploration_multiple.py  simec_vit_feature_importance.py  text_convert.py  train.py  train_vit.py  usage.txt  utils.py  vit.py  vit_baseline.sh  vit_exploration.sh  vit_interpretation_example.sh  vit_perturbation.py
Transformer_Explainability/: BERT_explainability.ipynb  requirements.txt
analysis/: bert_att_rollout.py  bert_attention_exp.py  bert_evaluation.py  bert_interpretation_analysis.py  error_analysis.py  experiments_utils.py  generate_results_df.py  mnist_perturbation_analysis.py  pred_analysis.ipynb  pred_analysis.py  pred_analysis_new.py  results_reset_dir.py  time_analysis.py  vit_att_rollout.py  vit_attention_exp.py  vit_perturbation.py  vit_predictions.py
baselines/: all.sh  bert_perturbation.py  vit_perturbation.py
dashboard/: app.py  figures.py
data-preprocessing/: image_convert.py  main.sh  text_convert.py  usage.txt
experiments/: __init__.py  bert_exploration.py  bert_exploration_interpretation.py  bert_feature_importance.py  bert_interpretation_only.py  configurations.json  decoder_tests_ViT.py  decoder_tests_bert.py  example-configurations.json  (+8 more)
(+97 files in other folders)
