[tool.poetry]
name = "input-space-inspection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "input_space_inspection"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
transformers = "^4.39.3"
transformer-implementations = "^0.0.9"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
highlight-text = "^0.2"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchsummary = "^1.5.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
