[tool.poetry]
name = "input-space-inspection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "simec", from = "src"}, {include = "input_space_inspection", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
transformers = "^4.39.3"
transformer-implementations = "^0.0.9"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
highlight-text = "^0.2"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchsummary = "^1.5.1"
seaborn = "^0.13.2"
pandas = "^2.2.2"
ipywidgets = "^8.1.2"
datasets = "^3.1.0"
scikit-learn = "^1.5.2"
gensim = "^4.3.3"
plotly = "^6.0.0"
parquet = "^1.3.1"
jupyter = "^1.1.1"
safetensors = "^0.5.3"
h5py = "^3.13.0"
umap-learn = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
